--- a/preambule.tex
+++ b/preambule.tex
@@ -37,11 +37,13 @@
     bindingoffset=0.5cm % Décalage pour la reliure (optionnel)
 ]{geometry}
 
-% Captions 
+% Captions et placement des figures
 \usepackage[font=small,labelfont=bf,width=0.5\textwidth]{caption}
 \usepackage{wrapfig}
 \usepackage{subcaption}
 \usepackage[bottom]{footmisc}
+
+\usepackage{placeins}
 
 % Style de numérotation
 \numberwithin{equation}{section}
