--- a/preambule.tex
+++ b/preambule.tex
@@ -26,6 +26,7 @@
 % TIKZ
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric}
+\usetikzlibrary{tikzmark,arrows.meta,calc}
 
 % Configuration de la mise en page
 \usepackage[
