--- a/preambule.tex
+++ b/preambule.tex
@@ -1,7 +1,7 @@
 % Packages utiles
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[french]{babel}
+\usepackage[T2A,T1]{fontenc}
+\usepackage[french,russian]{babel}
 \usepackage{amsmath}
 \usepackage{ amssymb }
 \usepackage{titlesec}
