--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1144,51 +1144,88 @@ Il est bon de rappeler que notre incapacité  à prévoir l'avenir est bien éta
 \section{Recherche sur les tokamaks}
 \label{sec:recherhce_tokamak}
 
-Le mot \textit{tokamak} a deux étimologies débattues vennant du russe, soit тороидальная камера с магнитными magnetic катушками ("toroidalnaïa kamera s magnitnymi katouchkami' Chambre toroïdale avec bobines magnétiques), soit тороидальная камера с аксиальным магнитным полем ("toroidalnaïa kamera s aksial'nym magnitnym polem" chambre toroïdale avec un champ magnétique axial).
+Le mot \textit{tokamak} a deux étimologies débattues vennant du russe, soit 
+%тороидальная камера с магнитными magnetic катушками (
+"toroidalnaïa kamera s magnitnymi katouchkami' Chambre toroïdale avec bobines magnétiques%)
+, soit 
+%тороидальная камера с аксиальным магнитным полем (
+"toroidalnaïa kamera s aksial'nym magnitnym polem" chambre toroïdale avec un champ magnétique axial%)
+.
 
-La machine a été inventé en union soviétique, les premiers développements ayant commencé dans les années 1950.
-À cette époque la recherche sur le toroidal pinch configuration été fortement étudiés au Royaume-uni et aux États-Unis.
-L'avantage du tokamak vient simplement de la stabilité augmenté grâce au champ magnétique toroîdal plus important.
+Le concept du tokamak a été inventé en Union soviétique, les premiers développements ayant commencé dans les années 1950.
+À cette époque, la recherche sur la configuration de pincement toroïdal a été fortement étudiée au Royaume-Uni et aux États-Unis.
+L'avantage du tokamak vient simplement de la stabilité augmentée grâce au champ magnétique toroïdal plus important.
 
-Le développement réussi du tokamak est principalement du fai t de l'attention particulière à la réduction des impuretés et la séparation entre le plasma et la chambre à vide grâce à un limiteur.
-Dans les années 1960, cela a mené à des plasma pure comparativement avec des températures d'électron d'environ \( \SI{1}{\kilo\electronvolt} \).
-En 1970, ces résultats sont générallement acceptés et considérés comme significatifs.
+Le développement réussi du tokamak est principalement du fait de l'attention particulière à la réduction des impuretés et la séparation entre le plasma et la chambre à vide grâce à un limiteur.
+Dans les années 1960, cela a mené à des plasma purs comparativement avec des températures d'électrons d'environ \( \SI{1}{\kilo\electronvolt} \).
+En 1970, ces résultats sont généralement acceptés et considérés comme significatifs.
 
 Les premiers tokamaks avaient des temps de confinement de l'énergie de quelques millisecondes et des températures d'ion de quelques centaines d'\( \SI{}{\electronvolt} \).
 Dans les années 1970, la priorité a été de savoir si ces conditions pouvaient être améliorées.
-Cette tache a été prises en charge et de nombreux tokamaks ont été construit dans plusieurs pays.
+Cette tache a été prise en charge et de nombreux tokamaks ont été construits dans plusieurs pays.
 
-Il est rapidement devenu évident que le confinement de l’énergie est anormal.
+Il est rapidement devenu évident que le transport est anormal.
 Les pertes d’énergie des électrons dépassent le transport collisionnel d’environ deux ordres de grandeur, et les pertes d’énergie des ions sont également plusieurs fois supérieures au transport collisionnel.
 Ainsi, bien que la théorie collisionnelle prédise que les pertes d’énergie devraient être dominées par la conduction thermique ionique, en pratique les énergies des électrons et des ions sont généralement comparables.
-Donc même si la théorie conditionnelle prédit que le temps de confinement collisionnel décroît comme \( 1/n \), où \( n \) est la densité d'électron, expérimentallement le temps de confinement augmente avec \( n \).
+Donc même si la théorie collisionnelle prédit que le temps de confinement collisionnel décroît comme \( 1/n \), où \( n \) est la densité d'électrons, expérimentalement le temps de confinement augmente avec \( n \).
 
-Tandis que les tokamaks plus grands ont été construit, les améliorations attendues du confinement ont été atteinte et des temps de confinement de \( \SI{100}{\milli\second} \) ont été obtenues dès 1980.
+Tandis que les tokamaks plus grands ont été construits, les améliorations attendues du confinement ont été atteintes et des temps de confinement de \( \SI{100}{\milli\second} \) ont été obtenues dès 1980.
 Puisqu'un temps de confinement de l'ordre de la seconde est nécessaire pour un réacteur, il était important de faire la meilleure estimation des conditions nécessaires pour cela.
-Le modèle le plus simple consistent avec les résultats expérimentaux donnait \( \tau_E \approx n a^2 \), où \( a \) est le petit rayon du plasma, et une extrapolation des données expérimentales indiquait qu'un petit rayon \( \sim \SI{2}{meter} \) pourrait être suffisant pour un réacteur.
+Le modèle le plus simple compatible avec les résultats expérimentaux donnait \( \tau_E \approx n a^2 \), où \( a \) est le petit rayon du plasma, et une extrapolation des données expérimentales indiquait qu'un petit rayon \( \sim \SI{2}{meter} \) pourrait être suffisant pour un réacteur.
 
-Ce pré-rtequis sur la taille du plasma semblait acceptable et le design de grands tokamaks expérimentaux ont été fait dans plusieurs pays.
+Ce pré-requis sur la taille du plasma semblait acceptable et la conception de grands tokamaks expérimentaux ont été fait dans plusieurs pays.
 Le plus grand étant l'expérience collaborative du Joint European Torus (Torus européen commun) JET, ayant un petit rayon de \( \SI{1.5}{\meter} \).
 
 L'autre tâche des années 1970 était l'investigation du chauffage des ions à haute températures.
 Les premières expériences utilisaient uniquement le chauffage ohmique du plasma par le courant toroïdal.
 Malheureusement, le chauffage ohmique perd en efficacité à haute température car la résistance électrique du plasma chute quand la température des électrons augmente, évoluant comme \( T_e^{3/2} \).
 La première méthode de chauffage additionnel à fonctionner avec succès était l'injection de particules neutres.
-Des atomes neutres à haute vitesse sont injecté dans le plasma et donnent leur énergie par des collisions.
-Une autre méthode de chauffage est de lancer des ondes à fréquences radio (RF) dans le plasma de façon à ce qu'elles soient absorbé à des surfaces de résonnance à l'intérieur du plasma.
-Plusieurs fréquences ont été utilisé mais la plus prometteuse était le chauffage par résonnance cyclotron des ions.
-L'injection de neutres et le chauffage RF ont atteinent des températures de plusieurs \( \SI{}{\kilo\electronvolt} \) au début des années 1980.
+Des atomes neutres à haute vitesse sont injectés dans le plasma et donnent leur énergie par des collisions.
+Une autre méthode de chauffage est de lancer des ondes à fréquences radio (RF) dans le plasma de façon à ce qu'elles soient absorbées à des surfaces de résonnances à l'intérieur du plasma.
+Plusieurs fréquences ont été utilisées mais la plus prometteuse était le chauffage par résonnance cyclotron des ions.
+L'injection de neutres et le chauffage RF ont atteint des températures de plusieurs \( \SI{}{\kilo\electronvolt} \) au début des années 1980.
 
-Les plus hautes températures produitent par les chauffages additionnels ont permis de clarifié la dépendance du temps de confinement à la température.
-Une prédiction théorique basé sur le transport d'énergie par de simples collisions donnerait un confinement qui se dégraderait avec l'augmentation de la densité mais s'améliorerait avec une température plus grande.
-Malheureusement, dans ces plasmas plus chaud, le temps de confinment a été trouvé de décroire avec la densité et la température.
-Lorsque la puissance de chauffage a été applied au plasma, le temps de confinement a chuté.
+Les plus hautes températures produites par les chauffages additionnels ont permis de clarifier la dépendance du temps de confinement à la température.
+Une prédiction théorique basée sur le transport d'énergie par de simples collisions donnerait un confinement qui se dégraderait avec l'augmentation de la densité mais s'améliorerait avec une température plus grande.
+Malheureusement, dans ces plasmas plus chaud, le temps de confinement a été trouvé de décroitre avec la densité et la température.
+Lorsque la puissance de chauffage a été appliquée au plasma, le temps de confinement a chuté.
 Ces résultats étaient décevant mais n'ont pas présenté un obstacle fondamental.
-En utilisant des résultats empiriques donnés par une variété d'expériences, le temps de confinement a été prédit de s'amélioré avec la taille du tokamak et son courant du plasma plus grand.
+En utilisant des résultats empiriques donnés par une variété d'expériences, le temps de confinement a été prédit de s'améliorer avec la taille du tokamak et son courant du plasma plus grand.
 
-Une heureuse découverte faite par le tokamak ASDEX était l'existence de mode d'opération du plasma qui ont un plus long temps de confinement que l'opération normale.
+Une heureuse découverte faite par le tokamak ASDEX était l'existence de modes d'opération du plasma qui ont un plus long temps de confinement que l'opération normale.
 Ce mode est appelé H-mode.
-La transition à ce mode confinement amélioré a été trouvé dans un plasma avec un divertor et à un niveau de chauffage du plasma suffisant.
-La transition apparait brusquement et semble être associé à un confinement amélioré au bord du plasma.
+La transition à ce mode de confinement amélioré a été trouvé dans un plasma avec un divertor et à un niveau de chauffage du plasma suffisant.
+La transition apparaît brusquement et semble être associée à un confinement amélioré au bord du plasma.
+
+Un problème qui est apparent depuis les premières expériences est l'apparition d'instabilités.
+Parmi celles-ci, la plus dangereuse sont\ les disruptions, dans lesquelles l'instabilité cause une perte rapide d'énergie du plasma et la fin de la décharge.
+Durant ces événements des courants puissants sont induits dans la chambre à vide et produisent des forces importantes sur la chambre.
+Les disruptions réduisent sérieusement le régime de fonctionnement du tokamak, limitant à la fois la densité et le courant du plasma pour un champ magnétique toroïdal donné.
+Une autre instabilité qui limite la densité de courant au centre du plasma est l'oscillation de relaxation appellé instabilité en dents de scie ("sawtooth").
+Ces oscillations causent des pertes répétées d'énergie dans la région centrale.
+
+Un type supplémentaire d'instabilité limite le rapport de pression du plasma par densité d'énergie magnétique.
+Le rapport de ces deux quantitées est appelé \( \beta \) et la restriction imposée par l'instabilité est appelée limite \( \beta \).
+La valeur de \( \beta \) a été augmentée jusqu'à cette limite dans plusieurs tokamaks.
+En modifiant les conditions de fonctionnement, la limite \( \beta \) peut être augmentée et une valeur de \( \beta \) supérieure à \( \SI{10}{\percent} \) a été obtenue dans le tokamak DIII-D.
+Les valeurs de \( \beta \) requises pour un réacteur sont un peu inférieures à cela, accentuant la pensée que la limite \( \beta \) ne sera pas un problème sérieux.
+
+Au début des années 1980, deux grands tokamaks ont été construits, TFTR et JET.
+Ils ont été conçus pour atteindre plusieurs mégaampères et produire un montant significatifs d'énergie thermonucléaire par des plasmas de deutérium-tritium.
+Dans ces expériences, le plasma a été chauffé à des températures nécessaires pour un réacteur, des températures au-delà de \( \SI{30}{\kilo\electronvolt} \) ont été atteintes.
+Dans JET, un temps de confinement supérieur à la seconde a été obtenu, et le régime de fonctionnement du tokamak a été étendu avec des courant du plasma jusqu'à \( \SI{7}{\mega\ampere} \) et des durées de décharge jusqu'à une minute.
+
+En 1991, un autre palier a été franchi.
+Des évaluations ont montré que les conditions du plasma atteintes dans les plasmas de deutérium de JET étaient telles que si le deutérium était remplacé par un mélange 50-50 de deutérium et de tritium, la puissance de réaction de fusion serait comparable à la puissance de chauffage injectée dans le plasma.
+Même si cette expérience ne peut pas être mené à bien à cette époque à cause du niveau de radioactivité dans la structure du tokamak, il a été décidé de faire une expérience au tritium  préliminaire.
+Une quantité controlée de tritium a été injecté dans un plasma de deutérium en tant que faisceau de neutres.
+Cela a mené à une puissance de réaction de fusion supérieure à un mégawatt pour plus d'une seconde.
+Des expériences suivantes utilisant un mélange 50-50 de deutérium et de tritium ont permis la production d'une puissance de fusion de plus de \( \SI{10}{\mega\watt} \) dans TFTR et de \( \SI{16}{\mega\watt} \) dans JET.
+
+Il est clair que de nombreux problèmes de la recherche en fusion ont été surmontés dans des tokamaks.
+Il est nécessaire de se touner vers l'avenir et la prochaine étape du développement des tokamaks.
+Ce projet se concentrera sur les problèmes critiques et s'il y parvient, démentrera la faisabilité d'un tokamak réacteur.
+Il semble probable que le premier tokamak à atteindre l'ignition sera un projet commun de plusieurs pays.
+Il y a déjà une équipe de coopération internationale dont la tâche de concevoir un tokamak qui produira une puissance de fusion significative. Ce tokamak est ITER pour International Thermonuclear Experimental Reactor (Réacteur thermonucléaire expérimental international).
 
 \end{document}
