Fin de la bibliographie du chapitre 1

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -116,7 +116,7 @@ La section efficace à basse énergie d'impact et faible car la barrière de Cou
 Le potentiel est illustré dans la \autoref{fig:potential_energy}.
 
 Grâce à 'effet tunnel de la mécanique quantique, la fusion D-T se produit à des énergies inférieures que celles requse'nt pour outrepasser la barrière de Coulomb.
-La section efficace pour les réactions est données dans ma \autoref{fig:cross_section}, et on voit que la section efficace maximale a lieu juste au dessus de \( \SI{100}{\kilo\electronvolt} \).
+La section efficace pour les réactions est données dans la \autoref{fig:cross_section}, et on voit que la section efficace maximale a lieu juste au dessus de \( \SI{100}{\kilo\electronvolt} \).
 
 \begin{figure}
     \centering
@@ -520,7 +520,7 @@ Une vue plus générale de l'approche de l'ignition est obtenue en considérant 
 En utilisant l'\autoref{eq:puissance_chauffage_simplifiee} il est possible de dessiner les contours d'égales valeurs de \( P \) nécessaires pour maintenir une température donnée à une densité donnée.
 Les incertitudes sur \( \tau_E (n, T) \) empêche le tracé d'un diagram précis, mais la \autoref{subfig:puissance_contour} montre la forme générale attendue \autoref{subfig:puissance_3D} donne la même information dans la forme d'un tracé deux dimentionnel de \( P(n, T) \).
 On peut voir que la trajectoire vers l'ignition nécéssitant d'une puissance minimale est celle passant par dela le point de selle.
-Ce point de selle est souvent appellé le passafe de Cordey.
+Ce point de selle est souvent appellé le passage de Cordey.
 
 À l'ignition, la puissance appliquée peut être éteinte et il y a un équilibre entre le chauffage par particule-\( \alpha \) et les pertes de puissance du plasma.
 Cependant pour le cas montré dans la \autoref{fig:power_comp} cet équilibre est instable.
@@ -1227,5 +1227,119 @@ Il est nécessaire de se touner vers l'avenir et la prochaine étape du dévelop
 Ce projet se concentrera sur les problèmes critiques et s'il y parvient, démentrera la faisabilité d'un tokamak réacteur.
 Il semble probable que le premier tokamak à atteindre l'ignition sera un projet commun de plusieurs pays.
 Il y a déjà une équipe de coopération internationale dont la tâche de concevoir un tokamak qui produira une puissance de fusion significative. Ce tokamak est ITER pour International Thermonuclear Experimental Reactor (Réacteur thermonucléaire expérimental international).
+
+\clearpage
+\twocolumn
+\section*{Bibliographie}
+
+Quelques livres ont été écrits avec la fusion thermonucléaire comme sujet principal.
+De ceux-ci, les plus anciens ne sont plus à jour sur tout mais néanmoins, donnent toujours des informations et des points de vue utiles, et sont donc inclus dans la liste chronologique suivante:
+
+\begin{itemize}
+	\item Glasstone, S. et Loveberg, R.H. controlled thermonuclear reactions. Van Nostrand, Princeton, New Jersey (1960)
+	\item Rose, D.J. et Clark, M. Plasmas and controlled fusion. MIT Press, Cambridge, Mass (1961)
+	\item Artimovich, L.A. Controlled thermonuclear reactions. Gordon and Breach, New York (1974)
+	\item Kammash, T. Fusion reactor physics. Ann Arbor Science, Ann Arbor, Michigan (1975)
+	\item Teller, E. (ed). Fusion. Academic Press, New York (1981)
+	\item Gill; R.D. (ed). Plasma physics and nuclear fusion research. (Culham Summer School on Plasma Physics). Academic Press, London (1981)
+	\item Dolan, T.J. Fusion research. Pergamon Press, New York (1982)
+	Gross, J. Fusion energy. Wiley, New York (1984)
+	\item Miyamoto, K. Plasma physics for nuclear fusion, 2nd edn. MIT Press, Cambridge, Mass (1989)	
+\end{itemize}
+
+\subsubsection*{Réactions de fusion et fusion thermonucléaire}
+
+Une compilation des sections efficaces et des taux de réaction est donnée par
+
+\begin{itemize}
+	\item Miley, G.H. Towner, H. et Ivich, N? Fusion cross-sections and reactivities. University of Illinois Nuclear Engineering Report COO-2218-17. Urbana, Illinois (1974)
+\end{itemize}
+
+\subsubsection*{Critère de Lawson}
+
+\begin{itemize}
+	\item Lawson, J.D. Some criteria for a power producing thermonuclear reactor. Proceedings of the Physical Society B70, 6 (1957).
+\end{itemize}
+
+La determination du critère est donnée dans la première édition de ce livre.
+
+\subsubsection*{Bases des tokamaks}
+
+Un des premiers papiers décrivant les principes de base et les premiers résultats est
+\begin{itemize}
+	\item Artsimovich, L.A. Tokamak devices. Nuclear Fusion, 12, 215 (1972)
+\end{itemize}
+
+\subsubsection*{Tokamak réacteur}
+
+Un compte-rendu des réacteurs à fusion dont une discussion sur les tokamaks est donné dans l'article
+
+\begin{itemize}
+	\item Conn, R.W. Magnetic fusion reactors. Fusion (ed. E. Teller) Vol. 1, Academic Press, New York (1981)
+\end{itemize}
+
+Une description des réacteurs à fusion est inclue dans le chapitre 7 du livre
+\begin{itemize}
+	\item Dolan, T.J. Fusion research. Pergamon Press, New York (1982)
+	Gross, J. Fusion energy. Wiley, New York (1984)
+\end{itemize}
+
+\subsubsection*{Réserves en combustible}
+
+Les besoins mondiaux en énergie et en électricité sont donnés par
+\begin{itemize}
+	\item IEA, Global Energy Review 2025
+\end{itemize}
+Pour les réserves en pétrole et en gaz fossile
+\begin{itemize}
+	\item OPEC, Annual Statistical Bulletin 2025 
+\end{itemize}
+pour l'uranium
+\begin{itemize}
+	\item IAEA-NEA, Uranium 2020 ressources, production and demand
+\end{itemize}
+pour le lithium
+\begin{itemize}
+	\item US Geology survey.  Mineral Commodity Summaries 2025
+\end{itemize}
+
+\subsubsection*{Économies}
+
+Les analystes de l'économie des tokamaks réacteurs semblent avoir un large éventail de vues.
+Un compte rendu des potentiels réacteurs à fusion ainsi qu'une discussion des coûts de l'électricité possibles est donnné dans
+\begin{itemize}
+	\item Conn, R.W. et al. Economics, safety and environmental prospects of fusion reactors. Nuclear Fusion 30, 1919 (1990)
+\end{itemize}
+Un autre plus en détail est
+\begin{itemize}
+	\item Krakowski, R.A. et Delene, J.G. Connection between physics and economics for tokamak fusion power plants. J. Fusion Energy 7, 49 (1988)
+\end{itemize}
+Une vision moins optimiste est exprimée dans
+\begin{itemize}
+	\item Pfirsch, D. et Schmitter, K.H. Some critical observations on the prospects of fusion power. Fourth international conference on energy options. Londres, I.E.E. Conference publication N° 233, 350, I.E.E., Londres (1984)
+\end{itemize}
+
+\subsubsection*{Recherche sur les tokamaks}
+
+Les chapitres 11 et 12 sont dédiés à la description d'expériences particulières et les références des articles utilisés y sont données.
+
+Un livre résumant la recherche sur les tokamaks et donnant un bon point de vue de la physique sous-jacente est
+\begin{itemize}
+	\item Kadomtsev B.B. Tokamak plasma, a complex physical system. Institute of Physics Publishing, Bristol (1992)
+\end{itemize}
+
+La formule de Goldston est décrite dans
+
+\begin{itemize}
+	\item Goldston, R.J. Energy confinement scaling in tokamaks: some implications of recent experiments with ohmic and strong auxiliary heating. Plasma Physics and Controlled Fusion, 26, N° IA, 87 (1984)
+\end{itemize}
+
+\subsubsection*{Constantes physiques}
+
+Une liste des constantes physiques fondamentales ou autres est disponible dans
+
+\begin{itemize}
+	\item Tables of physical and chemical constants, (initiallement par) G.W.C. Kaye et T.H. Laby. Longman, Londres
+\end{itemize}
 
 \end{document}
