Début du chapitre 2

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@ Pour éviter une continuelle redéfinition des symboles fréquemment utilisés, 
 
 \subfile{chapter1}
 
-%\include{chapitre2}
+\subfile{chapter2}
 % Ajoute d'autres chapitres ici
 
 \end{document}
